# PLSL_SLAM

./: README.md  run.sh  版本说明.md
camera_models/: CMakeLists.txt
config/: vins_rviz_config.rviz
config/corridor/: cam0_mei.yaml  cam1_mei.yaml  corri_stereo_config.yaml  left_equ.yaml  right_equ.yaml
config/euroc/: cam0_pinhole.yaml  cam1_pinhole.yaml  euroc_stereo_imu_config.yaml
config/kitti_bag/: cam0_pinhole.yaml  kitti_mono_imu_config.yaml  kitti_stereo_config.yaml  kitti_stereo_imu_config.yaml
config/lifelongSLAM/: cam0_pinhole.yaml  d400_imu_mono_config.yaml  d400_imu_stereo_config.yaml
config/mynteye/: left_mei.yaml  left_pinhole.yaml  mynteye_mono_imu_config.yaml
config/mynteye-d/: device_params_left.yaml  device_params_right.yaml  left_pinhole.yaml  mynt_mono_config.yaml  mynt_stereo_imu_config.yaml  mynt_stereo_imu_lidar_config.yaml  right_pinhole.yaml
config/mynteye-d-color/: left_pinhole.yaml  mynt_stereo_config.yaml  mynt_stereo_imu_config.yaml  right_pinhole.yaml
config/zongmu/: cam0_pinhole.yaml  zm_mono_imu_config.yaml
global_fusion/src/: globalOptNode.cpp
lidar/: CMakeLists.txt  cameraParameters.h  package.xml  pointDefinition.h  processDepthmap.cpp  registerPointCloud_node.cpp
loop_fusion/: CMakeLists.txt  package.xml
loop_fusion/src/: pose_graph.cpp  pose_graph_node.cpp
result/: extrinsic_parameter.csv  solvetime.txt
result/Calibra_lidar_camera/: camera_lidar_new.yml
result/New_for_paper/: 日志.md
result/New_for_paper/long_lab/: .evo_ape.sh.swo  .evo_ape.sh.swp  PLSL-SLAM-Long-2021-1-8.yaml  aloam.txt  evo_ape.sh  evo_traj.sh  groundtruth_long.txt  orbslam3.txt  pls-vio.csv  plsl-no-lidar.csv  plsl-slam.csv  vins-fusion.csv  vio.csv
result/New_for_paper/long_out_loop/: PLSL-SLAM-OutLong-2021-1-10.yaml  aloam.txt  evo_ape.sh  evo_traj.sh  groundtruth_outlong.txt  pls-vio.csv  plsl-loop.csv  plsl-no-lidar.csv  plsl-slam.csv  vins-fusion.csv
result/New_for_paper/short_lab/: aloam.txt  evo_ape.sh  evo_traj.sh  groundtruth.txt  mynteye-2020-12-10.pgm  mynteye-2020-12-10.yaml  pl-vio.txt  pls-vio.csv  plsl-slam.csv  vins-fusion-best.csv  vins-fusion.csv  vins-mono-best.csv  vins-mono.csv
result/New_for_paper/short_lab_loop/: aloam.txt  evo_ape.sh  evo_traj.sh  groundtruth.txt  plsl-loop.csv  plsl-no-lidar-loop.csv  plsl-no-lidar.csv  plsl-slam.csv  vins-fusion.csv
result/Old_for_paper/EuRoC-result/: evo_traj.sh
result/Old_for_paper/Old-for-paper-src/: V2-01.csv  (+4 more)
result/cost_time/: FeatureTrackerTime.txt  SolveTime.txt  pls-vio-SolveTime.txt  pls-vioFeatureTrackerTime.txt  plsl-FeatureTrackerTime.txt  plsl-SolveTime.txt  time_sys.py  time_sys1.py  vins-FeatureTrackerTime.txt  vins-SolveTime.txt
result/depth/: depth_sys1.py  lidar-depth.txt  stere-depth.txt
result/time_stamp/: time_imgL.txt  time_imgR.txt  time_lidar.txt  time_show.py
support_files/data_sync/: CMakeLists.txt  package.xml  record.sh
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/launch/: lifelongbag.launch  vins_rviz.launch  vins_stereo_IMU_Euroc_only_rviz_bag.launch
vins_estimator/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp  laserMapping.cpp  rosNodeTest.cpp  scanRegistration.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: initial_bias_factor.h  lidarFactor.hpp  line_projection_factor.cpp  marginalization_factor.cpp  odom_factor.h  projectionOneFrameTwoCamFactor.cpp  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameTwoCamFactor.cpp  projection_factor.cpp
vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h  lidar_feature_tracker.cpp  lidar_feature_tracker.h  linefeature_tracker.cpp  linefeature_tracker.h
vins_estimator/src/initial/: initial_alignment.h
vins_estimator/src/utility/: line_geometry.h  visualization.cpp  visualization.h
(+115 files in other folders)
